--- a/localisation/TD_01_flavour_eneratian_l_english.yml
+++ b/localisation/TD_01_flavour_eneratian_l_english.yml
@@ -43,10 +43,15 @@
  rescapians_ho_desc: "This order was founded by a group of terolian monks, whose sole purpose was the treatment of wounded soldiers and civilians."
  
  TD_Eneratian_Tolerated_Heresy: "Tolerated Heresy"
+ desc_TD_Eneratian_Tolerated_Heresy: "People of this province gained the right to practice their heretical cults."
  TD_Eneratian_utilize_religious_fervor: "Reignited Religious Fervor"
+ desc_TD_Eneratian_utilize_religious_fervor: "Thanks to the support of the clergy, the people are much more supportive of the emperor's zealotry."
  TD_Eneratian_Simony_found_out: "Simony discovered"
+ desc_TD_Eneratian_Simony_found_out: "Our minor act of simony has been discovered by the nosy clergy."
  TD_Eneratian_opposed_the_church: "Opposed the church Authority"
+ desc_TD_Eneratian_opposed_the_church: "Our ruler has embarked on a campaign to stop the rising power of the clergy."
  TD_Eneratian_fund_inquisition: "Funding the Inquisition"
+ desc_TD_Eneratian_fund_inquisition: "The inqisition is quickly growing thanks to the efforts and funding of our ruler."
  
  eneratian.2.t: "Conflict of Bishops"
  eneratian.2.desc: "One of the more radical priests in the nation has recently embraced a new notion on the life of Sal. Many are outraged by his almost heretical views and call for the [Root.Monarch.GetTitle] to somehow deal with this sinful man."
@@ -57,7 +62,7 @@
  eneratian.3.a: "Condemn the rites"
  eneratian.3.b: "We can let it slide.."
  eneratian.4.t: "Universal Support"
- eneratian.4.desc: "Only in rare occassions it happens that a ruler is so widely known for being a zealous and pious follower of Sal that even the most influential men in the clergy universally support his actions. They recently reached out to the court in order to help the [Root.Monarch.GetTitle] in any of his righteous missions."
+ eneratian.4.desc: "Only on rare occassions it happens that a ruler is so widely known for being a zealous and pious follower of Sal that even the most influential men in the clergy universally support his actions. They recently reached out to the court in order to help the [Root.Monarch.GetTitle] in any of his righteous missions."
  eneratian.4.a: "Let's utilize the religious fervor"
  eneratian.4.b: "Better relocate focus into administrative matters"
  eneratian.5.t: "Heretic Pacts"
