--- a/localisation/TD_01_flavour_ansgarland_l_english.yml
+++ b/localisation/TD_01_flavour_ansgarland_l_english.yml
@@ -18,12 +18,11 @@
  ansgarland_koniginsmarine_desc: "For the majority of history the fleet was seen as an afterthought, a simple tool to use when needed. When the age of colonization came, the need for a large fleet to maintain the lands oversea became a necessity to project one's own power over other nations. This potential was seen by Queen Mathilda, who was the first to massively invest in our fleet, which became known as Königinsmarine to honor her efforts."
 
  ansgarland.1.t: "Ties of [Root.Monarch.Dynasty.GetName] dynasty"
- ansgarland.1.desc: "Lorem ipsum"
+ ansgarland.1.desc: "The Geoberic dynasties are knit tighter than any other families. Thanks to keeping blood within the elite, there is always a high chance to find an alternative heir to the throne in case of the inability of our ruler to produce an offspring. Exactly in this situation the [Root.GovernmentName] of [Root.GetName] has found itself in, with some suggesting that the heir to the [geoberic_heir_source_et.GovernmentName] of [geoberic_heir_source_et.GetName] would be the ruler of both crowns."
  ansgarland.1.a: "We will trust [geoberic_heir_source_et.GetName]"
  ansgarland.1.a_tt: "We will fall under a Personal Union with the specified Country."
  ansgarland.1.b: "I'm sure one of my cousins will be a great heir..."
  ansgarland.1.c: "I WILL produce an heir, I promise."
  ansgarland.2.t: "Devil's Due"
- ansgarland.2.desc: "sad"
+ ansgarland.2.desc: "With the death of our widely beloved, yet not so competent in bed, ruler, the throne has finally been inherited by [geoberic_heir_source_et.Monarch.GetName]. Maybe thanks to this our nations will be able to be stronger - or fall together."
  ansgarland.2.a: "Change the world. My final message. Goodbye."
- 
