--- a/localisation/TD_03_missions_saelian_l_english.yml
+++ b/localisation/TD_03_missions_saelian_l_english.yml
@@ -1,24 +1,24 @@
 ﻿l_english:
  generic_gain_support_title: "Gain Support"
- generic_gain_support_desc: "f_t"
+ generic_gain_support_desc: "In order to control the empire, we must acquire the full support of the Tetrarchy. This will not only bring us closer to the crown, but also they are potentially very loyal and threatening allies."
  TD_emperor_imperial_ambition: "Imperial Ambition"
 
  generic_the_holy_crown_title: "Claim the Holy Crown"
- generic_the_holy_crown_desc: ""
+ generic_the_holy_crown_desc: "The crown of the Saelian Empire was always seen by many rulers as their ultimate goal, for they know how much power to a single individual it can bring. We must ensure that it is in our hands at all cost."
  TD_emperor_holy_dynasty: "Holy Dynasty"
 
  generic_secure_the_border_title: "Secure the Border"
- generic_secure_the_border_desc: ""
+ generic_secure_the_border_desc: "To keep the empire intact, the borders must finally be established and princes be brought once again under our protection."
  TD_emperor_imperial_protection: "Imperial Protection"
  TD_emperor_border_protection: "Imperial Fortress"
 
  generic_expand_the_realm_title: "Expand the Realm"
- generic_expand_the_realm_desc: ""
+ generic_expand_the_realm_desc: "The Empire once the only civilized empire in Mysentria and we must strive to return to those days of glory."
  generic_expand_the_realm_tt: "Gain permanent claim on every heretic province in the world and every heathen province in Mysentria."
  TD_emperor_zealous_conquest: "Zealous Conquest"
 
  generic_subdue_tetrarchy_title: "Subdue Tetrarchy"
- generic_subdue_tetrarchy_desc: ""
+ generic_subdue_tetrarchy_desc: "With our expansion the tetrarchy is growing more powerful, greedily seeking more ways to diminish the authority of the emperor. We must end their ambitions while they are still weak."
  generic_subdue_tetrarchy_tt1: "We won the war against the League of Lippstadt."
  generic_subdue_tetrarchy_tt2: "The Lippstadt Compromise has been signed."
  generic_subdue_tetrarchy_tt3: "If we won the war against the League of Lippstadt"
@@ -32,10 +32,6 @@
  saelian.8.b: "Continued cooperation is the way forward."
  saelian.8_tt: "We will decide the fate of the tetrarchy"
 
- generic_secure_the_interior_title: "Secure the Interior"
- generic_secure_the_interior_desc: ""
- TD_emperor_prosperity_for_all: "Prosperity for All"
-
  generic_heirs_of_Salius_title: "Pax Saeliana"
- generic_heirs_of_Salius_desc: ""
+ generic_heirs_of_Salius_desc: "The Saelian Peace is once again upon the world. No man or woman will have to fear foreign invasion or domestic abuse, for the empire is once again united for centuries to come."
  TD_emperor_holiest_of_wars: "The Holiest of Wars"
