new visparaya provicnes

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -4523,9 +4523,9 @@
  PROV4522: "4522"
  PROV4523: "Alwamira" #Mirrha Valley
  PROV4524: "Naesakh" #Soft Rock
- PROV4525: "4525"
- PROV4526: "4526"
- PROV4527: "4527"
+ PROV4525: "Carzhumat"
+ PROV4526: "Kabodan"
+ PROV4527: "Azbaybun"
  PROV4528: "4528"
  PROV4529: "4529"
  PROV4530: "4530"
