marstonia mechanics +gfx + ideas rewrite + loc

--- a/localisation/TD_01_flavour_marstonia_l_english.yml
+++ b/localisation/TD_01_flavour_marstonia_l_english.yml
@@ -26,20 +26,19 @@
  group_marstonian_ideas_start: "Marstonian Minor Traditions"
  group_marstonian_ideas_bonus: "Marstonian Minor Ambition"
  MARSTONIA_folk_tradition: "Folk Tradition"
- MARSTONIA_folk_tradition_desc: "Culture of Marstonia is full of colorful festivals, holidays, local dieties and traditions. This makes it very easy to placate our people by organising one of those events."
- MARSTONIA_surrounded_by_the_sea: "Surrounded by the Sea"
- MARSTONIA_surrounded_by_the_sea_desc: "Marstonia borders the Middelandse Sea from almost every side. This position, and also influence of merchant republics, caused our people to be very experienced sailors who are famous throughout the world."
+ MARSTONIA_folk_tradition_desc: "Marstonian cultures are full of colorful festivals, various holidays, local deities and traditions. This makes it very easy to distract our people from the worries of life simply by organising one of those events."
+ MARSTONIA_surrounded_by_the_sea: "Surrounded by Seas"
+ MARSTONIA_surrounded_by_the_sea_desc: "Marstonia borders the Ostsee and Middelande seas from basically every direction. This position, and also influence of Silvestrine merchant republics, has caused our people to be very experienced sailors, famed throughout the region."
  MARSTONIA_warriors_of_dievo: "Warriors of Dievo"
- MARSTONIA_warriors_of_dievo_desc: "Dievo is the prime diety of Marstonic Pantheon. His cult is incredibely strong among Marstonians, even in those who converted to different faiths. He is seen as the absolute ruler of the world, and so is very often used as a propaganda by earthly rulers to boost morale of their soldiers."
+ MARSTONIA_warriors_of_dievo_desc: "Dievo is the prime diety of Marstonic Pantheon. His cult is incredibely strong amongst Marstonians. So much so that even those who converted to different faiths still ask for his guidance. He is seen as the absolute ruler of the world and thus is very often used to boost the legitimacy of the earthly rulers and morale of their pious soldiers."
  MARSTONIA_valdnieks_and_their_sargs: "Valdnieks and Sargs"
- MARSTONIA_valdnieks_and_their_sargs_desc: "Sargs are the most trusted of men. They will serve their valdniek until they die in service to him. This relations legitimizes control over the land, even if only by using brute force of ruler's most loyal guard."
+ MARSTONIA_valdnieks_and_their_sargs_desc: "Sarg is often synonymous with the man that you can trust in any matter and know that you will receive help and support. Their role is to protect Valdnieks, often fight for them until they die in service to him. This created a highly loyalist class which controls vast swats of land in the nation, often bringing the rest of the populace to fold through sheer force."
  MARSTONIA_mezizstrade: "Mežizstrade"
- MARSTONIA_mezizstrade_desc: "Forests in Marstonia are deep and dark. According to folklore, they hold many evil creatures who only wait for children to wander alone into the woods. This, and some minor factor of economic exploitation, encourages us to cut them down and build new settlements."
+ MARSTONIA_mezizstrade_desc: "According to folklore, they hold many devilish creatures and tricksters, waiting for children and fools to wander alone into the woods. This, and some minor factor of economic exploitation, encourages us to cut them down and build new settlements, so that no child has to ever experience these horrifying monsters."
  MARSTONIA_land_scouting: "Land Scouting"
- MARSTONIA_land_scouting_desc: "Due to many threats from the outside, we have to use every advantage at our disposal. Traversing the harsh forests unnoticable to enemy became popular tactic to fight against the stronger foe."
+ MARSTONIA_land_scouting_desc: "Deep and dark forests of Marstonia are almost impassable to an outsider. Only the fittest and most acclaimed to their forests are able to effectively traverse them without the enemy noticing, giving us an edge and advantage in any battle we might face."
  MARSTONIA_new_ways: "New Ways"
- MARSTONIA_new_ways_desc: "Spread of new faiths in marstonia is undeniable. Poeple and entire countries embrace new ways and sometimes reject legacy of their ancestors. Without dialogue with these people, our tradition is at risk of vanishing amidst more universal faiths. It is necessary to strengthen the bonds between our people despite religious differences."
- 
+ MARSTONIA_new_ways_desc: "Spread of new faiths in marstonia is undeniable. First Sigilians, Eneratians, and now Liemarians, poeple and entire countries embrace new ways, sometimes rejecting ancient legacy of their ancestors. Without dialogue of ideas, our tradition is at risk of vanishing amidst these more universal faiths. It is necessary to strengthen the bonds between our people despite religious differences."
  
  marstonian_ideas: "Marstonian Ideas"
  marstonian_ideas_start: "Marstonian Traditions"
@@ -47,20 +46,18 @@
  marstonian_unification: "Marstonian Unification"
  marstonian_unification_desc: "Our unity came at a cost of our brave men fighting for their heritage. Some local rulers were opposed to unification, but now we can build a new Marstonia, not divided between illegitimate valdnieks, but under one Karalis."
  MARSTONIA_mezizstrade_upgraded: "Mežizstrade"
- MARSTONIA_mezizstrade_upgraded_desc: "Just like Bogilish dukes and Silvestrian burghers, in order to increase our economic output we need to expand into the wild and unexploited forests to make space for our farms, factories and people."
+ MARSTONIA_mezizstrade_upgraded_desc: "Just like Bogilish dukes and Silvestrine burghers, in order to increase our economic output we need to expand into the wild and unexploited forests to make space for our farms, estates and people."
  marstonia_coast_protection: "Coast Protection"
- marstonia_coast_protection_desc: "We are surrounded by naval powers from all sides just waiting to prey on us and access through Mezonian Straits. In order to protect our interest, we need to fight fire with fire and invest into a glorious navy."
+ marstonia_coast_protection_desc: "Naval powers of Ehrenstaat, Tummland and the Empire surround us from all sides, waiting to prey on our misfortunes and to gain access through the Mezonian Strait. In order to protect the interest of our nation, we need to fight fire with fire and invest into a glorious navy."
  marstonia_cooperation_with_drotaci: "Cooperation with the Drotaci"
- marstonia_cooperation_with_drotaci_desc: "Ever since the marstonian statehood emerged, the relations between the nobility and the court were very cordial and both groups often supported each other. Even in these prosperous times we can trust our nobility."
+ marstonia_cooperation_with_drotaci_desc: "Ever since the Marstonian statehood emerged, the relations between the nobility and the court were incredibely cordial and supportive, which came from the times where Drotaci were merely the most skilled soldiers in Valdnieks army. We can rest assured that even in the worst times of our nation, we can place our trust in the nobility."
  marstonian_lex_dura_manu: "Dura Manu Lex"
- marstonian_lex_dura_manu_desc: "But just because they are loyal doesn't mean they should be a powerful force in the nation. Compared to older systems, Dura Manu law was supposed to distance the monarch from the nobility decreasing his over-reliance on levies."
+ marstonian_lex_dura_manu_desc: "But just because they are loyal doesn't mean they should be a powerful force in the nation. Compared to older systems, Dura Manu law was meant to distance the monarch from the nobility decreasing the over-reliance on nobble levies and focusing on establishing a proper and stable military force of the kingdom."
  marstonian_conscription_system: "Localized Conscription System"
- marstonian_conscription_system_desc: "Inspired by the western standard of conscription, our system tries to improve and adapt it to our nation. The majority of it is managed by noble bureaucrats in rural areas and by the crown in urban areas."
+ marstonian_conscription_system_desc: "The newly established localized conscription system takes heavy inspiration from western kingdoms of Ansgarland and Nordmark, where many young men are categorized and experience a standard military service. The majority of the system is managed by noble bureaucrats in most rural areas and by the crown in cities and towns."
  marstonia_expand_the_royal_academy: "Expanded Royal Academy"
- marstonia_expand_the_royal_academy_desc: "Royal Academy of Karavija was founded in 1642, but was later greatly expanded in order to accomodate the large amounts of potential recruits wishing to become a higher ranking officers. Many great minds taught at this academy, some of them even coming from as far as Acerb."
- 
- 
- 
+ marstonia_expand_the_royal_academy_desc: "Royal Academy of Karavija was founded in 1642, but was later greatly expanded in order to accomodate the large amounts of potential recruits wishing to become a higher ranking officers, which was often rewarded with honorary title of a Sarg. Many great minds taught at this academy, some of them even coming from as far as Acerb, teaching our people about war and strategy from the finest of sources."
+
 
  uzkolia_ideas: "Uzkolian Ideas"
  uzkolia_ideas_start: "Uzkolian Traditions"
@@ -85,7 +82,7 @@
  bezyswet: "Bezyswet"
  bezyswet_desc: "God of traveling, trade, discussion and adventure."
  belgolva: "Belgolva"
- belgolba_desc: "Goddess of fertility, new settlements, water sources and rivers."
+ belgolva_desc: "Goddess of fertility, new settlements, water sources and rivers."
  velypshen: "Velypshen"
  velypshen_desc: "God of prosperity, farming, work and parenthood."
  les: "Les"
@@ -131,3 +128,47 @@
  ziemelia_infrastructure_expansion_desc: "Northern Coast was disconnected from the rest of marstonia for most of its time due to a long maritime route and dense forests of central Ziemelia. In 1670s many new roads were built to accomodate this problem and finally connect our lands, with major roads crossing in Karavija."
  ziemelia_conquest_of_marstonia: "Conquest of Marstonia"
  ziemelia_conquest_of_marstonia_desc: "Disunited Valdniestes of Marstonia always fought each other over petty matters and minor land gains. If our nation wants to survive in the modern age of centralization and absolutism, we must put an end to these infightings. We will stand proudly alongside other empires of the world."
+
+ marstonian_pantheon_formalize_the_sacrifices_title: "Formalize the Sacrifices"
+ marstonian_pantheon_formalize_the_sacrifices_desc: "We will attempt to integrate sacrifices to the gods into our government, to ensure that its holy enough to function."
+ marstonian_pantheon_formalized_sacrifices: "Formalized Sacrifices"
+ desc_marstonian_pantheon_formalized_sacrifices: "Sacrifices have been made official and only licensed priests can perform them."
+ marstonian_pantheon_solidify_the_pantheon_title: "Solidify the Pantheon"
+ marstonian_pantheon_solidify_the_pantheon_desc: "In order to bring unity to our people, we have to establish a unified pantheon, one which will finally centralize the workings of the religion."
+ marstonian_pantheon_unified_pantheon: "Unified Pantheon"
+ desc_marstonian_pantheon_unified_pantheon: "Some of the lesser deities, like the god of beard trimming, have been removed from the official pantheon."
+
+ marstonian_pantheon_sacrifice: "Perform a Sacrifice"
+ marstonian_pantheon_sacrifice_tt: "Perform a Sacrifice in order to solidify your rule and devotion to your currently preferred deity."
+ mp_recent_sacrifice_mod: "Recently Performed a Sacrifice"
+ desc_mp_recent_sacrifice_mod: "The Sacrificing ritual has been recently performed."
+ marstonia.3_insight_tt: "We will be able to conduct a sacrifice of either wealth, livestock or grain, which will buff your current deity."
+ marstonia.3.t: "Ritual of Sacrifice"
+ marstonia.3.desc: "Sacrifice of goods is an important part of our culture, showing people's devotion to the gods. While sacrifices cleary bring divine effects, a good ruler knows that it can also be used to reign in the populace and show one's faithfullness. What kind of sacrifice should be performed today?"
+ marstonia.3.a: "Our deity deserves some good beef."
+ marstonia_sacrificed_livestock: "A Sacrifice of Livestock"
+ desc_marstonia_sacrificed_livestock: "We have sacrificed finest beef and pork."
+ marstonia.3.b: "Grain will surely satisfy them."
+ marstonia_sacrificed_grain: "A Sacrifice of Grain"
+ desc_marstonia_sacrificed_grain: "We have sacrificed millet, wheat and variety of vegetables."
+ marstonia.3.c: "They need some luxury in their life."
+ marstonia_sacrificed_wealth: "A Sacrifice of Wealth"
+ desc_marstonia_sacrificed_wealth: "We have sacrificed a great deal of furs, coins, grails and silverware."
+ marstonia.3.d: "We need blood to truly satisfy the gods."
+ marstonia_sacrificed_heir: "A Sacrifice of Blood"
+ desc_marstonia_sacrificed_heir: "We have sacrificed our one true heir, but he would've died in a hunting accident anyway..."
+ marstonia_conducted_human_sacrifice: "Conducted Human Sacrifice"
+ marstonia.3.e: "On the second thought, sacrifices can wait..."
+ marstonian_pantheon_sacrifice_reward_effect_tt: "We will receive a reward based on our current §YPersonal Deity§!:\n§TDievo§!: Monthly Autonomy Change: §G-0.05§!\n§TBezyswet§!: Movement Speed: §G+10.0%§!\n§TBelgolva§!: National Unrest: §G-2.00§!\n§TVelyphsen§!: Global Goods Produced Modifier: §G+10.0%§!\n§TLes§!: Shock Damage Received: §G-10.0%§!\n§TJutranka§!: Core Creation Cost: §G-15.0%§!"
+ dievo_buffed_mod: "Sacrifice to Dievo"
+ desc_dievo_buffed_mod: "We have performed a sacrifice to Dievo"
+ bezyswet_buffed_mod: "Sacrifice to Bezyswet"
+ desc_bezyswet_buffed_mod: "We have performed a sacrifice to Bezyswet"
+ belgolva_buffed_mod: "Sacrifice to Belgolva"
+ desc_belgolva_buffed_mod: "We have performed a sacrifice to Belgolva"
+ velypshen_buffed_mod: "Sacrifice to Velypshen"
+ desc_velypshen_buffed_mod: "We have performed a sacrifice to Velypshen"
+ les_buffed_mod: "Sacrifice to Les"
+ desc_les_buffed_mod: "We have performed a sacrifice to Les"
+ jutranka_buffed_mod: "Sacrifice to Jutranka"
+ desc_jutranka_buffed_mod: "We have performed a sacrifice to Jutranka"
