--- a/localisation/TD_01_flavour_visparaya_l_english.yml
+++ b/localisation/TD_01_flavour_visparaya_l_english.yml
@@ -53,10 +53,6 @@
  frasatah_new_world_marketplace: "New World's Marketplace"
  frasatah_new_world_marketplace_desc: "Our influence on the world's economy is undeniable. We control Hestani incense and naval supplies markets and most of the commerce goes through our merchants. We sustain economies of many countries in the region - there is not a single nation which would dare to fight us."
 
- visparayan_ideas: "Visparayan Ideas"
- visparayan_ideas_start: "Visparayan Traditions"
- visparayan_ideas_bonus: "Visparayan Ambition" 
-
  memlashal_ideas: "Memlashali Ideas"
  memlashal_ideas_start: "Memlashali Traditions"
  memlashal_ideas_bonus: "Memlashali Ambition" 
@@ -187,3 +183,21 @@
  frankrani_eopedian_homeland_desc: "Eopedianism was originally considered to be a radical Ilumist sect, focused less on veneration of many prophets, but rather spirits that inhabit the lands. Many still have a deep connection with the God, thanks to this unique theology."
  frankrani_yatunian_apotheosis: "Yatunian Apotheosis"
  frankrani_yatunian_apotheosis_desc: "Yatun is probably the second most important figure in whole Maqitan world, the only person more important being Yerma itself. His great religious, militaristic and political deeds have shown the world, that our people are far greater and powerful than they assumed."
+
+ visparayan_ideas: "Visparayan Ideas"
+ visparayan_ideas_start: "Visparayan Traditions"
+ visparayan_ideas_bonus: "Visparayan Ambition" 
+ visparaya_maqitan_gates: "Maqitan Gates"
+ visparaya_maqitan_gates_desc: "REPLACE_ME"
+ visparaya_asamanacs: "Asamanacs"
+ visparaya_asamanacs_desc: "REPLACE_ME"
+ visparaya_pemenian_guns: "Pemenian Guns"
+ visparaya_pemenian_guns_desc: "REPLACE_ME"
+ visparaya_darbasabar: "Darbasabar"
+ visparaya_darbasabar_desc: "REPLACE_ME"
+ visparaya_eastern_campaigns: "Eastern Campaigns"
+ visparaya_eastern_campaigns_desc: "REPLACE_ME"
+ visparaya_mend_the_divides: "Mend the Divides"
+ visparaya_mend_the_divides_desc: "REPLACE_ME"
+ visparaya_everlasting_empire: "Everlasting Empire"
+ visparaya_everlasting_empire_desc: "REPLACE_ME"
