--- a/localisation/TD_01_flavour_marstonia_l_english.yml
+++ b/localisation/TD_01_flavour_marstonia_l_english.yml
@@ -172,3 +172,7 @@
  desc_les_buffed_mod: "We have performed a sacrifice to Les"
  jutranka_buffed_mod: "Sacrifice to Jutranka"
  desc_jutranka_buffed_mod: "We have performed a sacrifice to Jutranka"
+
+ marstonian_pirate_reform: "Marstonian Pirates"
+ marstonian_pirate_reform_desc: "Marstonian Pirates hold a grudge against their continental bretherens for exiling the legendary pirate lady Mutova."
+ mechanic_legitimacy_from_raids_yes: "Legitimacy for each Slave Raid: §G+0.50§!"
