--- a/localisation/TD_estate_names_l_english.yml
+++ b/localisation/TD_estate_names_l_english.yml
@@ -10,6 +10,7 @@
  estate_tiarnai: "Tiarnaí"
  estate_marchantes: "Marchantes"
  #Clergy
+ estate_suitei: "Suitei"
  estate_matahri: "Matahari"
  estate_shanhohn: "Shanhohn"
  estate_priesthood: "Priesthood"
