--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -192,34 +192,38 @@
  aboneo_area: "Aboneo"
  dagolli_area: "Dagolli"
 
- serenima_area: "Serenima"
- saganaria_area: "Saganaria"
- tenerasta_area: "Tenerasta"
- cacumuds_area: "Cacumuds Piedmont"
- dagillo_area: "Dagillo"
- orasolo_area: "Orasolo"
- tiarene_area: "Tiarene"
- mazzardia_area: "Mazzardia"
- cholia_area: "Cholia"
- errtesa_area: "Errtesa"
- accarierto_area: "Acciarerto"
- capira_area: "Capira"
- conferma_area: "Conferma"
- alabergia_area: "Alabergia"
- grafouli_area: "Grafouli"
- dillatia_area: "Dillatia"
- macono_area: "Macono"
- scuneo_area: "Scuneo"
- sarneo_area: "Sarneo"
- canello_area: "Canello"
- estne_area: "Estne"
- serroditiore_area: "Serroditiore"
- chidcolline_area: "Chidcolline"
- brianoli_area: "Brianoli"
- trallentio_area: "Trallentio"
- remesella_area: "Remesella"
- alensona_area: "Alensona"
- recatolli_area: "Recatolli"
+ 01_debug: "Serenima"
+ 02_debug: "Saganaria"
+ 03_debug: "Tenerasta"
+ 04_debug: "Cacumuds Piedmont"
+ 05_debug: "Dagillo"
+ 06_debug: "Orasolo"
+ 07_debug: "Tiarene"
+ 08_debug: "Mazzardia"
+ 09_debug: "Cholia"
+ 10_debug: "Errtesa"
+ 11_debug: "Acciarerto"
+ 12_debug: "Capira"
+ 13_debug: "Conferma"
+ 14_debug: "Alabergia"
+ 15_debug: "Grafouli"
+ 17_debug: "Dillatia"
+ 18_debug: "Macono"
+ 19_debug: "Scuneo"
+ 16_debug: "Sarneo"
+ 20_debug: "Canello"
+ 21_debug: "Estne"
+ 22_debug: "Serroditiore"
+ 23_debug: "Chidcolline"
+ 24_debug: "Brianoli"
+ 25_debug: "Trallentio"
+ 26_debug: "Remesella"
+ 27_debug: "Alensona"
+ 28_debug: "Recatolli"
+ 29_debug: "d"
+ 30_debug: "b"
+ 31_debug: "c"
+ 32_debug: "d"
 
  Pohjantahti_area: "Pohjantahti"
  keskimaasto_area: "Keskimaasto"
