minor samadia changes

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -4526,7 +4526,7 @@
  PROV4525: "Carzhumat"
  PROV4526: "Kabodan"
  PROV4527: "Azbaybun"
- PROV4528: "4528"
+ PROV4528: "Daskivistar"
  PROV4529: "4529"
  PROV4530: "4530"
  PROV4531: "4531"
