--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -192,38 +192,39 @@
  aboneo_area: "Aboneo"
  dagolli_area: "Dagolli"
 
- 01_debug: "Serenima"
- 02_debug: "Saganaria"
- 03_debug: "Tenerasta"
- 04_debug: "Cacumuds Piedmont"
- 05_debug: "Dagillo"
- 06_debug: "Orasolo"
- 07_debug: "Tiarene"
- 08_debug: "Mazzardia"
- 09_debug: "Cholia"
- 10_debug: "Errtesa"
- 11_debug: "Acciarerto"
- 12_debug: "Capira"
- 13_debug: "Conferma"
- 14_debug: "Alabergia"
- 15_debug: "Grafouli"
- 17_debug: "Dillatia"
- 18_debug: "Macono"
- 19_debug: "Scuneo"
- 16_debug: "Sarneo"
- 20_debug: "Canello"
- 21_debug: "Estne"
- 22_debug: "Serroditiore"
- 23_debug: "Chidcolline"
- 24_debug: "Brianoli"
- 25_debug: "Trallentio"
- 26_debug: "Remesella"
- 27_debug: "Alensona"
- 28_debug: "Recatolli"
- 29_debug: "d"
- 30_debug: "b"
- 31_debug: "c"
- 32_debug: "d"
+ rubmeo_area: "Rubmeo"
+ valbaro_area: "Valbaro"
+ alensona_area: "Alensona"
+ recatolli_area: "Recatolli"
+ cerizia_area: "Cerizia"
+ scurano_area: "Scurano"
+ scucara_area: "Scucara"
+ filgnano_area: "Filgnano"
+ mernello_area: "Mernello"
+ brianza_area: "Brianza"
+ orasolo_area: "Orasalo"
+ cacumuds_piedmont_area: "Cacumuds Piedmont"
+ estne_area: "Estne"
+ rocbino_area: "Rocbino"
+ corcciano_area: "Corcciano"
+ macono_area: "Macono"
+ civneta_area: "Civneta"
+ dillatia_area: "Dillatia"
+ alabergano_area: "Alabergano"
+ verzola_area: "Verzola"
+ chancarne_area: "Chancarne"
+ sarneo_area: "Sarneo"
+ dagivelo_area: "Dagivelo"
+ saganaria_area: "Saganaria"
+ grafouli_area: "Grafouli"
+ ertoli_area: "Ertoli"
+ pianreto_area: "Pianreto"
+ peareto_area: "Peareto"
+ recatolli_area: "Recatolli"
+ capiranella_area: "Capiranella"
+ tiarene_area: "Tiarene"
+ serenima_area: "Serenima"
+ patra_area: "Patra"
 
  Pohjantahti_area: "Pohjantahti"
  keskimaasto_area: "Keskimaasto"
