--- a/localisation/TD_regions_l_english.yml
+++ b/localisation/TD_regions_l_english.yml
@@ -15,8 +15,9 @@
  syvametsa_region: "Syvämetsä"
  indrigerland_region: "Indrigerland"
  arkabil_region: "Arkabil"
- western_camaria_region: "Finosia"
- eastern_camaria_region: "Eastern Camaria"
+ finosia_region: "Finosia"
+ caprotta_region: "Caprotta"
+ cacuvesca_region: "Cacuvesca"
  confinia_region: "Confinia"
  fawud_region: "Fawud"
  pamkusea_region: "Pamkusea"
