--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -214,7 +214,7 @@
  verzola_area: "Verzola"
  chancarne_area: "Chancarne"
  sarneo_area: "Sarneo"
- dagivelo_area: "Dagivelo"
+ dagiouri_region: "Dagiouri"
  saganaria_area: "Saganaria"
  grafouli_area: "Grafouli"
  ertoli_area: "Ertoli"
