--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -210,7 +210,7 @@
  PROV209: "Lahban"
  PROV210: "Mafqadan"
  PROV211: "Isealdún"
- PROV212: "Coast of Rubmeo"
+ PROV212: "Cemitonian Gulf"
  PROV213: "Qadrun"
  PROV214: "Nithar"
  PROV215: "Qalin"
