cool countries new (for stefus)
includes:
alone people
anavatics who know

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1059,6 +1059,10 @@
  PAY_ADJ: "Paviniyan"
  PVD: "Pagavada"
  PVD_ADJ: "Pagavadian"
+ BLN: "Bilengur"
+ BLN_ADJ: "Bilenguri"
+ EKA: "Ekakiri"
+ EKA_ADJ: "Ekakirian"
 
  COK: "Cokhura"
  COK_ADJ: "Cokhuran"
