--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -751,6 +751,8 @@
  alopahua_area: "Alopahua"
  pracdisa_area: "Pracdisa"
  dheiya_area: "Dheiya"
+ jayatte_area: "Jayatte"
+ saramica_area: "Saramica"
 
  uripatu_area: "Uripatu"
  posala_area: "Posala"
