--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -4527,14 +4527,14 @@
  PROV4526: "Kabodan"
  PROV4527: "Azbaybun"
  PROV4528: "Daskivistar"
- PROV4529: "4529"
- PROV4530: "4530"
- PROV4531: "4531"
- PROV4532: "4532"
- PROV4533: "4533"
- PROV4534: "4534"
- PROV4535: "4535"
- PROV4536: "4536"
+ PROV4529: "Ligibal"
+ PROV4530: "Araduzi"
+ PROV4531: "Vyapti"
+ PROV4532: "Bahdesi"
+ PROV4533: "Panetara"
+ PROV4534: "Badhati"
+ PROV4535: "Sevpane"
+ PROV4536: "Talnadi"
  PROV4537: "4537"
  PROV4538: "4538"
  PROV4539: "4539"
