fixes + new age ability

--- a/localisation/EU4_l_english.yml
+++ b/localisation/EU4_l_english.yml
@@ -190,7 +190,7 @@
  last_age_power_projection: "Last Age Objectives"
  current_age_power_projection: "Age Objectives Fulfilled"
  obj_discover_america: "Discover the New World"
- obj_discover_america_desc: "As a nation with a capital in Mysentria, Sahila, Kakigia or Pemenia, discover at least one province in either Chantlia or Venatia."
+ obj_discover_america_desc: "As a nation with a capital in Mysentria or Sahila, discover at least one province in either Chantlia or Venatia."
  obj_discover_america_tooltip: "Discover any province in the New World"
  obj_100_development: "Developed Nation"
  obj_100_development_desc: "Reach a total of at least 100 development in your nation."
