--- a/localisation/TD_ages_l_english.yml
+++ b/localisation/TD_ages_l_english.yml
@@ -5,7 +5,7 @@
  obj_many_subjects: "Many Subjects"
  obj_many_subjects_desc: "Have at least 4 subjects or be the Sigilian or Eneratian Emperor"
  obj_ahead_tech: "Innovative Nation"
- obj_ahead_tech_tt: "Be Ahead in Technology"
+ obj_ahead_tech_tt: "Is Ahead in Technology"
  obj_ahead_tech_desc: "Be Ahead of time in any technology."
  TD_ab_self_sustainable_colonies: "Self-sustainable Colonies"
  TD_ab_self_sustainable_colonies_tt: "Has 'Self-sustainable Colonies' unlocked"
@@ -13,6 +13,8 @@
  TD_ab_dau_tran_thanda_tt: "Has 'Dau Trahn Thanda' unlocked"
  TD_ab_sunrise_highway: "Sunrise Highway"
  TD_ab_sunrise_highway_tt: "Has 'Sunrise Highway' unlocked"
+ TD_ab_maqitan_piracy: "Pirates of the Maqitan"
+ TD_ab_maqitan_piracy_tt: "Has 'Pirates of the Maqitan' unlocked"
 
  age_of_reformation_short: "Reformation"
  age_of_reformation: "Age of Reformation"
