--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -2,7 +2,7 @@
  geoberic_bay_tradenode: "Bay of Callaina"
  niheyan_coast_tradenode: "Niheyan Coast"
  bogiland_tradenode: "Doniepr"
- ostsee_tradenode: "Ostsee"
+ ostsee_tradenode: "Revoria"
  limstadt_tradenode: "Limstadt"
  magstadt_tradenode: "Magstadt"
  nifthem_tradenode: "Vetikerk"
@@ -111,3 +111,5 @@
  tenera_tradenode: "Ehezdan"
  sanooma_tradenode: "Sanooma"
  anzaqan_tradenode: "Maqhazian Coast"
+ bohemia_tradenode: "Cemitonian Gulf"
+ cacumuds_tradenode: "Adrianburg"
