--- a/localisation/TD_01_flavour_ansgarland_l_english.yml
+++ b/localisation/TD_01_flavour_ansgarland_l_english.yml
@@ -26,3 +26,9 @@
  ansgarland.2.t: "Devil's Due"
  ansgarland.2.desc: "With the death of our widely beloved, yet not so competent in bed, ruler, the throne has finally been inherited by [geoberic_heir_source_et.Monarch.GetName]. Maybe thanks to this our nations will be able to be stronger - or fall together."
  ansgarland.2.a: "Change the world. My final message. Goodbye."
+
+ ansgarlander_monarchy: "Ansgarlander Monarchy"
+ ansgarlander_monarchy_desc: "The authority of the king is based on a loyal elite, which often is compromised from people of different estates, keeping the ambitions of individual estates at bay."
+ strengthen_the_konigsmarschall_reform: "Strengthen the Königsmarschall"
+ strengthen_the_konigsmarschall_reform_desc: "King or marshall will be able to legally assign other nobles as marshall's subordinates, however with the same restrictions and only some of the duties."
+ mechanic_better_noble_primacy_yes: "§YPrimacy of the Nobility§! will no longer decrease loyalty and absolutism."
