--- a/localisation/TD_estate_names_l_english.yml
+++ b/localisation/TD_estate_names_l_english.yml
@@ -8,6 +8,7 @@
  estate_usra_clans: "Afradusran"
  estate_slechte: "Slëchte"
  estate_tiarnai: "Tiarnaí"
+ estate_wenyers: "Wenyers"
  estate_marchantes: "Marchantes"
  #Clergy
  estate_suitei: "Suitei"
