--- a/localisation/TD_peasants_l_english.yml
+++ b/localisation/TD_peasants_l_english.yml
@@ -121,6 +121,9 @@
  rural_gov_cap_reduction: "Rural Governing Capacity Reduction"
  desc_rural_gov_cap_reduction: "This province benefits from cooperation between nobility and peasantry."
 
+ encourage_urban_life_reform: "Encourage Urban Life"
+ encourage_urban_life_reform_desc: "By encouraging our peasants to take the life as factory workers by promising them wealth, we can strengthen the burghers at the cost of the rural nobles."
+
  estate_peasants_disaster: "Commoner Coup"
  EST_CRUSHED_PEASANTS: "The Peasants have been curtailed"
  #check cossacks_l_english
